--- a/src/MakePdf.Wpf/Views/Pages/StandardMode.xaml
+++ b/src/MakePdf.Wpf/Views/Pages/StandardMode.xaml
@@ -57,10 +57,10 @@
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Row="0" Grid.Column="0" DockPanel.Dock="Left" VerticalAlignment="Center" Margin="10" Text="Input directory" />
+                        <TextBlock Grid.Row="0" Grid.Column="0" DockPanel.Dock="Left" VerticalAlignment="Center" Margin="10" Text="Working directory" />
                         <DockPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch">
                             <Button DockPanel.Dock="Right" Margin="5" MinWidth="90"  VerticalAlignment="Center" Content="Browse..." Click="SetInputDirectoryButton_Click" ToolTip="Open File Dialog" />
-                            <TextBox materialDesign:HintAssist.Hint="" VerticalAlignment="Center" materialDesign:TransitionAssist.DisableTransitions="True" Text="{Binding InputDirectory}" AllowDrop="True" Drop="InputDirectory_Drop" PreviewDragOver="Item_PreviewDragOver" />
+                            <TextBox materialDesign:HintAssist.Hint="" VerticalAlignment="Center" materialDesign:TransitionAssist.DisableTransitions="True" Text="{Binding WorkingDirectory}" AllowDrop="True" Drop="InputDirectory_Drop" PreviewDragOver="Item_PreviewDragOver" />
                         </DockPanel>
                         <TextBlock Grid.Row="1" Grid.Column="0" DockPanel.Dock="Left" VerticalAlignment="Center" Margin="10" Text="Output file" />
                         <DockPanel Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch">
