--- a/src/MakePdf.Wpf/Views/Pages/Menu.xaml
+++ b/src/MakePdf.Wpf/Views/Pages/Menu.xaml
@@ -25,7 +25,7 @@
     <StackPanel Orientation="Horizontal">
         <Menu IsMainMenu="True" >
             <MenuItem Header="File(_F)">
-                <MenuItem Header="Exit" InputGestureText="Alt+F4">
+                <MenuItem Header="Exit" InputGestureText="Alt+F4" Click="Exit_Click">
                     <MenuItem.Icon>
                         <materialDesign:PackIcon Kind="ExitToApp" />
                     </MenuItem.Icon>
@@ -44,7 +44,7 @@
                         <materialDesign:PackIcon Kind="HelpCircleOutline" />
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Header="Check for update" Click="CheckForUpdate_Click">
+                <MenuItem Header="Check for updates" Click="CheckForUpdate_Click">
                     <MenuItem.Icon>
                         <materialDesign:PackIcon Kind="Autorenew" />
                     </MenuItem.Icon>
