--- a/src/MakePdf.Wpf/Views/Pages/Home.xaml
+++ b/src/MakePdf.Wpf/Views/Pages/Home.xaml
@@ -16,22 +16,28 @@
              TextOptions.TextRenderingMode="Auto"
              Background="{DynamicResource MaterialDesignPaper}"
              FontFamily="{DynamicResource MaterialDesignFont}">
-
-    <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-        <Button Height="120"  HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10" Padding="0" Style="{StaticResource MaterialDesignRaisedButton}" ToolTip="Resource name: MaterialDesignRaisedButton" Command="{Binding EasyModeButtonCommand}">
-            <StackPanel Margin="5" HorizontalAlignment="Left">
+    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Button Grid.Row="0" Grid.Column="0" Height="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10" Padding="0" ToolTip="Easy Mode" Command="{Binding EasyModeButtonCommand}">
+            <StackPanel Margin="5" HorizontalAlignment="Left" VerticalAlignment="Stretch">
                 <TextBlock Style="{StaticResource MaterialDesignHeadlineTextBlock}" Margin="5">Easy Mode</TextBlock>
                 <Border BorderThickness="0.5" BorderBrush="LightGray" />
                 <TextBlock Margin="5">Easy Mode</TextBlock>
             </StackPanel>
         </Button>
 
-        <Button Height="120"  HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10" Padding="0" Style="{StaticResource MaterialDesignRaisedButton}" ToolTip="Resource name: MaterialDesignRaisedButton" Command="{Binding StandardModeButtonCommand}">
+        <Button Grid.Row="1" Grid.Column="0" Height="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10" Padding="0" ToolTip="Standard Mode" Command="{Binding StandardModeButtonCommand}">
             <StackPanel Margin="5" HorizontalAlignment="Left">
                 <TextBlock Style="{StaticResource MaterialDesignHeadlineTextBlock}" Margin="5">Standard Mode</TextBlock>
                 <Border BorderThickness="0.5" BorderBrush="LightGray" />
                 <TextBlock Margin="5">Standard Mode</TextBlock>
             </StackPanel>
         </Button>
-    </StackPanel>
+    </Grid>
 </UserControl>
