--- a/src/MakePdf.Wpf/Views/Pages/Menu.xaml
+++ b/src/MakePdf.Wpf/Views/Pages/Menu.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="MakePdf.Wpf.Views.Pages.Menu"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:app="clr-namespace:MakePdf.Wpf"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MakePdf.Wpf.Views.Pages"
@@ -24,28 +25,35 @@
     </i:Interaction.Triggers>
     <StackPanel Orientation="Horizontal">
         <Menu IsMainMenu="True" >
-            <MenuItem Header="File(_F)">
-                <MenuItem Header="Exit" InputGestureText="Alt+F4" Click="Exit_Click">
+            <MenuItem Header="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.MenuFile, Mode=OneWay}">
+                <MenuItem Header="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.MenuFile_Exit, Mode=OneWay}" InputGestureText="Alt+F4" Click="Exit_Click">
                     <MenuItem.Icon>
                         <materialDesign:PackIcon Kind="ExitToApp" />
                     </MenuItem.Icon>
                 </MenuItem>
             </MenuItem>
         </Menu>
+        <Menu IsMainMenu="True" >
+            <MenuItem Header="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.MenuLanguage, Mode=OneWay}">
+                <MenuItem Header="(Auto)" Click="ChangeCulture_Auto" />
+                <MenuItem Header="English" Click="ChangeCulture_English" />
+                <MenuItem Header="Japanese (日本語)" Click="ChangeCulture_Japanese" />
+            </MenuItem>
+        </Menu>
         <Menu IsMainMenu="True">
-            <MenuItem Header="Help(_H)">
-                <MenuItem Header="Usage" Click="Usage_Click">
+            <MenuItem Header="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.MenuHelp, Mode=OneWay}">
+                <MenuItem Header="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.MenuHelp_Usage, Mode=OneWay}" Click="Usage_Click">
                     <MenuItem.Icon>
                         <materialDesign:PackIcon Kind="HelpCircleOutline" />
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Header="Check for updates" Click="CheckForUpdate_Click">
+                <MenuItem Header="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.MenuHelp_CheckForUpdates, Mode=OneWay}" Click="CheckForUpdate_Click">
                     <MenuItem.Icon>
                         <materialDesign:PackIcon Kind="Autorenew" />
                     </MenuItem.Icon>
                 </MenuItem>
                 <Separator />
-                <MenuItem Header="About" Click="About_Click">
+                <MenuItem Header="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.MenuHelp_About, Mode=OneWay}" Click="About_Click">
                     <MenuItem.Icon>
                         <materialDesign:PackIcon Kind="InformationOutline" />
                     </MenuItem.Icon>
