--- a/src/MakePdf.Wpf/Views/Pages/StandardMode.xaml
+++ b/src/MakePdf.Wpf/Views/Pages/StandardMode.xaml
@@ -186,7 +186,7 @@
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
                         <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Margin="10" Text="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.ModeStandard_Word_CreateBookmarks, Mode=OneWay}" />
-                        <ComboBox Grid.Row="0" Grid.Column="1" materialDesign:ComboBoxAssist.ShowSelectedItem="{Binding ElementName=DisplaySelectedItemCheckBox, Path=IsChecked}" Margin="0 8 0 8" HorizontalAlignment="Left">
+                        <ComboBox Grid.Row="0" Grid.Column="1" materialDesign:ComboBoxAssist.ShowSelectedItem="{Binding ElementName=DisplaySelectedItemCheckBox, Path=IsChecked}" Margin="0 8 0 8" HorizontalAlignment="Left" SelectedIndex="{Binding CreateBookmarkFromWord}">
                             <ComboBoxItem IsSelected="True" Content="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.ModeStandard_Word_CreateBookmarks_FromHeading, Mode=OneWay}" />
                             <ComboBoxItem Content="{Binding Source={x:Static app:ResourceService.Current}, Path=Resources.ModeStandard_Word_CreateBookmarks_FromBookmark, Mode=OneWay}" />
                         </ComboBox>
